[gd_scene load_steps=44 format=1]

[ext_resource path="res://cenas/paralax.tscn" type="PackedScene" id=1]
[ext_resource path="res://titlesets/titleset_floresta.tres" type="TileSet" id=2]
[ext_resource path="res://cenas/shooter_big.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/gui_mobile.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/key_top.tscn" type="PackedScene" id=5]
[ext_resource path="res://imgs/heart3.png" type="Texture" id=6]
[ext_resource path="res://scripts/life.gd" type="Script" id=7]
[ext_resource path="res://imgs/heart.png" type="Texture" id=8]
[ext_resource path="res://imgs/heart1.png" type="Texture" id=9]
[ext_resource path="res://imgs/heart2.png" type="Texture" id=10]
[ext_resource path="res://scripts/dano_veneno.gd" type="Script" id=11]
[ext_resource path="res://cenas/rotor.tscn" type="PackedScene" id=12]
[ext_resource path="res://cenas/rotor2.tscn" type="PackedScene" id=13]
[ext_resource path="res://cenas/key.tscn" type="PackedScene" id=14]
[ext_resource path="res://imgs/titles.tex" type="Texture" id=15]
[ext_resource path="res://players/player.tscn" type="PackedScene" id=16]
[ext_resource path="res://imgs/base_caverna.png" type="Texture" id=17]
[ext_resource path="res://imgs/rotor.png" type="Texture" id=18]
[ext_resource path="res://scripts/boss1.gd" type="Script" id=19]
[ext_resource path="res://imgs/morcegao.png" type="Texture" id=20]
[ext_resource path="res://cenas/anime_player.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]

resource/name = "heart"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "heart1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "heart2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "heart3"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 15.9575, 2.26747 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 6, 3 )

[sub_resource type="GDScript" id=8]

script/source = "extends Area2D

func _ready():
	set_process(true)
	pass
	
func _process(delta):
	if get_tree().get_root().get_node(\"main/player\").key == true:
		get_node(\"fechado\").set_opacity(0)
	pass


func _on_door_body_enter( body ):
	if get_tree().get_root().get_node(\"main/player\").key == true:
		get_tree().change_scene(\"res://cenas/fase_01.tscn\")
	else:
		print(\"fechado\")
	
	
	pass # replace with function body
"

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 266, 10 )

[sub_resource type="GDScript" id=10]

script/source = "extends Area2D

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_base_fim_body_enter( body ):
	get_tree().change_scene(\"res://cenas/main.tscn\")
	pass # replace with function body
"

[sub_resource type="Animation" id=11]

resource/name = "anim_rotor"
length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotor1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 1, 49 )

[sub_resource type="GDScript" id=13]

script/source = "extends Area2D

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_fechar_barreira_body_enter( body ):
	### play barreira
	get_tree().get_root().get_node(\"main/barreiras/barreira_1/anim\").play(\"caindo\")
	get_tree().get_root().get_node(\"main/barreiras/barreira_2/anim\").play(\"caindo\")
	get_tree().get_root().get_node(\"main/player\").segura_camera()
	self.queue_free()
	pass # replace with function body
"

[sub_resource type="RectangleShape2D" id=14]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=15]

resource/name = "caindo"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.5, 1 ),
"transitions": FloatArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 136, 72 ), Vector2( 136, 88 ) ]
}

[sub_resource type="Animation" id=16]

resource/name = "caindo"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 136, 71 ), Vector2( 136, 104 ) ]
}

[sub_resource type="RectangleShape2D" id=23]

custom_solver_bias = 0.0
extents = Vector2( 16, 21 )

[sub_resource type="RectangleShape2D" id=24]

custom_solver_bias = 0.0
extents = Vector2( 17, 21 )

[sub_resource type="Animation" id=18]

resource/name = "asas"
length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=19]

resource/name = "flutuando"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 2.07053, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shape:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1.86607, 0.535887 ),
"update": 0,
"values": [ Vector2( -3, 4 ), Vector2( -3, -4 ) ]
}

[sub_resource type="Animation" id=20]

resource/name = "ataque01"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 25 ), Vector2( 328, 75 ), Vector2( 205, 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=21]

resource/name = "ataque02"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 205, 25 ), Vector2( 324, 80 ), Vector2( 440, 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=22]

resource/name = "ataque_gelo"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 1.4, 1.6, 2.1, 2.5, 2.7, 5 ),
"transitions": FloatArray( 1, 1, 3.24901, 1, 3.86374, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 25 ), Vector2( 329, 72 ), Vector2( 329, 72 ), Vector2( 329, -104 ), Vector2( 329, -104 ), Vector2( 329, 95 ), Vector2( 329, 95 ), Vector2( 440, 25 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 2.7 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "criar_gelo"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../player")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 2.7 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "shake"
} ]
}

[node name="main" type="Node2D"]

[node name="paralax" parent="." instance=ExtResource( 1 )]

[node name="titlemap_bg" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -458752, 41, -458751, 41, -458750, 41, -458749, 41, -458748, 41, -458747, 41, -458746, 41, -458745, 41, -458744, 41, -458743, 41, -458742, 41, -458741, 41, -458740, 41, -458739, 41, -458738, 41, -458737, 41, -458736, 41, -458735, 41, -458734, 41, -458733, 41, -458732, 41, -458731, 41, -458730, 41, -458729, 41, -458728, 41, -458727, 41, -458726, 41, -458725, 41, -458724, 41, -458723, 41, -458722, 41, -458721, 41, -458720, 41, -458719, 41, -458718, 41, -458717, 41, -458716, 41, -458715, 41, -458714, 41, -458713, 41, -458712, 41, -458711, 41, -458710, 41, -393216, 41, -393215, 41, -393214, 41, -393213, 41, -393212, 41, -393211, 41, -393210, 41, -393209, 41, -393208, 41, -393207, 41, -393206, 41, -393205, 41, -393204, 41, -393203, 41, -393202, 41, -393201, 41, -393200, 41, -393199, 41, -393198, 41, -393197, 41, -393196, 41, -393195, 41, -393194, 41, -393193, 41, -393192, 41, -393191, 41, -393190, 41, -393189, 41, -393188, 41, -393187, 41, -393186, 41, -393185, 41, -393184, 41, -393183, 41, -393182, 41, -393181, 41, -393180, 41, -393179, 41, -393178, 41, -393177, 41, -393176, 41, -393175, 41, -393174, 41, -327680, 40, -327679, 41, -327678, 41, -327677, 41, -327676, 41, -327675, 41, -327674, 41, -327673, 41, -327672, 41, -327671, 41, -327670, 41, -327669, 41, -327668, 41, -327667, 41, -327666, 41, -327665, 41, -327664, 41, -327663, 41, -327662, 41, -327661, 41, -327660, 41, -327659, 41, -327658, 41, -327657, 41, -327656, 41, -327655, 41, -327654, 41, -327653, 41, -327652, 41, -327651, 41, -327650, 41, -327649, 41, -327648, 41, -327647, 41, -327646, 41, -327645, 41, -327644, 41, -327643, 41, -327642, 41, -327641, 41, -327640, 41, -327639, 41, -327638, 41, -262144, 40, -262143, 41, -262142, 41, -262141, 41, -262140, 41, -262139, 41, -262138, 41, -262137, 41, -262136, 41, -262135, 41, -262134, 41, -262133, 41, -262132, 41, -262131, 41, -262130, 41, -262119, 41, -262118, 41, -262117, 41, -262116, 41, -262115, 41, -262114, 41, -262113, 41, -262112, 41, -262111, 41, -262110, 41, -262109, 41, -262108, 41, -262107, 41, -262106, 41, -262105, 41, -262104, 41, -262103, 41, -262102, 41, -196608, 40, -196607, 41, -196606, 41, -196605, 41, -196604, 41, -196603, 41, -196602, 41, -196601, 41, -196600, 41, -196599, 41, -196598, 41, -196597, 41, -196579, 41, -196578, 41, -196577, 41, -196576, 41, -196575, 41, -196574, 41, -196573, 41, -196572, 41, -196571, 41, -196570, 41, -196569, 41, -196568, 41, -196567, 41, -196566, 41, -131072, 40, -131071, 41, -131070, 41, -131069, 41, -131068, 41, -131067, 41, -131066, 41, -131065, 41, -131064, 41, -131041, 41, -131040, 41, -131039, 41, -131038, 41, -131037, 41, -131036, 41, -131035, 41, -131034, 41, -131033, 41, -131032, 41, -131031, 41, -131030, 41, -65536, 40, -65535, 41, -65534, 41, -65533, 41, -65532, 41, -65531, 41, -65530, 41, -65529, 41, -65528, 41, -65505, 41, -65504, 41, -65503, 41, -65502, 41, -65501, 41, -65500, 41, -65499, 41, -65498, 41, -65497, 41, -65496, 41, -65495, 41, -65494, 41, 0, 40, 1, 41, 2, 41, 3, 41, 4, 41, 5, 41, 6, 41, 7, 41, 8, 42, 31, 41, 32, 41, 33, 41, 34, 41, 35, 41, 36, 41, 37, 41, 38, 41, 39, 41, 40, 41, 41, 41, 42, 41, 65536, 40, 65537, 41, 65538, 41, 65539, 41, 65540, 41, 65541, 41, 65542, 41, 65543, 41, 65544, 42, 65556, 29, 65567, 41, 65568, 41, 65569, 41, 65570, 41, 65571, 41, 65572, 41, 65573, 41, 65574, 41, 65575, 41, 65576, 41, 65577, 41, 65578, 41, 131072, 40, 131073, 41, 131074, 41, 131075, 41, 131076, 41, 131077, 41, 131078, 41, 131079, 41, 131080, 42, 131103, 41, 131104, 41, 131105, 41, 131106, 41, 131107, 41, 131108, 41, 131109, 41, 131110, 41, 131111, 41, 131112, 41, 131113, 41, 131114, 41, 196608, 40, 196609, 41, 196610, 41, 196611, 41, 196612, 41, 196613, 41, 196614, 41, 196615, 41, 196616, 42, 196639, 41, 196640, 41, 196641, 41, 196642, 41, 196643, 41, 196644, 41, 196645, 41, 196646, 41, 196647, 41, 196648, 41, 196649, 41, 196650, 41, 262144, 43, 262145, 44, 262146, 44, 262147, 44, 262148, 44, 262149, 44, 262150, 44, 262151, 44, 262152, 45, 262159, 0, 262160, 28, 262168, 0, 262169, 28, 262175, 41, 262176, 41, 262177, 41, 262178, 41, 262179, 41, 262180, 41, 262181, 41, 262182, 41, 262183, 41, 262184, 41, 262185, 41, 262186, 41, 327711, 41, 327712, 41, 327713, 41, 327714, 41, 327715, 41, 327716, 41, 327717, 41, 327718, 41, 327719, 41, 327720, 41, 327721, 41, 327722, 41, 393247, 41, 393248, 41, 393249, 41, 393250, 41, 393251, 41, 393252, 41, 393253, 41, 393254, 41, 393255, 41, 393256, 41, 393257, 41, 393258, 41, 524273, 0, 524274, 27, 524275, 27, 524276, 27, 524277, 27, 524278, 27, 524279, 27, 524280, 27, 524281, 27, 524282, 27, 524283, 27, 524284, 27, 524285, 27, 524286, 27, 524287, 27, 458752, 27, 458753, 27, 458754, 27, 458755, 27, 458756, 27, 458757, 27, 458758, 27, 458759, 27, 458760, 27, 458761, 27, 458762, 27, 458763, 27, 458764, 27, 458765, 27, 458766, 27, 458767, 27, 458768, 27, 458769, 27, 458770, 27, 458771, 27, 458772, 27, 458773, 27, 458774, 27, 458775, 27, 458776, 27, 458777, 27, 458778, 27, 458779, 27, 458780, 27, 458781, 27, 458782, 27, 458783, 27, 458784, 27, 458785, 27, 458786, 27, 458787, 27, 458788, 27, 458789, 27, 458790, 27, 458791, 27, 458792, 27, 458793, 27, 458794, 28 )

[node name="shoters" type="Node" parent="."]

[node name="shooter_big" parent="shoters" instance=ExtResource( 3 )]

transform/pos = Vector2( 121, -110 )

[node name="gui_mobile" parent="." instance=ExtResource( 4 )]

[node name="key_top" parent="." instance=ExtResource( 5 )]

[node name="life" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="sprite" type="Sprite" parent="life"]

editor/display_folded = true
transform/pos = Vector2( 12.5981, 14.1873 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
offset = Vector2( 23.1061, -0.382342 )
region_rect = Rect2( -0.375, -0.375, 47.875, 16 )
script/script = ExtResource( 7 )

[node name="anim" type="AnimationPlayer" parent="life/sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/heart = SubResource( 1 )
anims/heart1 = SubResource( 2 )
anims/heart2 = SubResource( 3 )
anims/heart3 = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Danos" type="Node" parent="."]

editor/display_folded = true

[node name="poison" type="Area2D" parent="Danos"]

transform/pos = Vector2( 37, -170 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.069458, -5.55543 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 0
script/script = ExtResource( 11 )

[node name="shape" type="CollisionShape2D" parent="Danos/poison"]

transform/pos = Vector2( 0.069458, -5.55543 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="rotores" type="Node" parent="."]

editor/display_folded = true

[node name="rotor" parent="rotores" instance=ExtResource( 12 )]

transform/pos = Vector2( 207, -148 )

[node name="rotor 2" parent="rotores" instance=ExtResource( 13 )]

transform/pos = Vector2( 304, -189 )

[node name="key" parent="." instance=ExtResource( 14 )]

transform/pos = Vector2( 389, -212 )

[node name="door" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 455, -222 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 22 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="aberto" type="Sprite" parent="door"]

texture = ExtResource( 15 )
region = true
region_rect = Rect2( 464, 160, 48, 48 )

[node name="fechado" type="Sprite" parent="door"]

texture = ExtResource( 15 )
region = true
region_rect = Rect2( 400, 160, 48, 48 )

[node name="shape" type="CollisionShape2D" parent="door"]

transform/pos = Vector2( 0, 22 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="player" parent="." instance=ExtResource( 16 )]

transform/pos = Vector2( 178, 86 )

[node name="tilte_top" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="base_fim" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 96, 214 )
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = SubResource( 10 )

[node name="shape" type="CollisionShape2D" parent="base_fim"]

shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="enfeites" type="Node" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="enfeites"]

transform/pos = Vector2( 102, 104 )
z/z = -2
texture = ExtResource( 17 )
region = true
region_rect = Rect2( 48, 0, 80, 16 )

[node name="rotores_cima" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 149, -24 )
z/z = -1
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="rotor1" type="Sprite" parent="rotores_cima"]

transform/pos = Vector2( 3, 1 )
transform/rot = 360.0
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 18 )

[node name="anim" type="AnimationPlayer" parent="rotores_cima"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/anim_rotor = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "anim_rotor"

[node name="rotores_cima1" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 492, -24 )
z/z = -1
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="rotor1" type="Sprite" parent="rotores_cima1"]

transform/pos = Vector2( -2, 1 )
transform/rot = 360.0
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 18 )

[node name="anim" type="AnimationPlayer" parent="rotores_cima1"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/anim_rotor = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "anim_rotor"

[node name="fechar_barreira" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 217, 57 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
script/script = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="fechar_barreira"]

transform/pos = Vector2( 217, 57 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="barreiras" type="Node" parent="."]

[node name="barreira_1" type="StaticBody2D" parent="barreiras"]

editor/display_folded = true
transform/pos = Vector2( 136, 72 )
z/z = -2
input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="barreiras/barreira_1"]

texture = ExtResource( 15 )
region = true
region_rect = Rect2( 320, 112, 16, 16 )

[node name="shape" type="CollisionShape2D" parent="barreiras/barreira_1"]

shape = SubResource( 14 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="barreiras/barreira_1"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/caindo = SubResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="barreira_2" type="StaticBody2D" parent="barreiras"]

editor/display_folded = true
transform/pos = Vector2( 136, 71 )
z/z = -2
input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="barreiras/barreira_2"]

texture = ExtResource( 15 )
region = true
region_rect = Rect2( 320, 112, 16, 16 )

[node name="shape" type="CollisionShape2D" parent="barreiras/barreira_2"]

shape = SubResource( 14 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="barreiras/barreira_2"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/caindo = SubResource( 16 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="boss" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 440, 25 )
input/pickable = false
shapes/0/shape = SubResource( 23 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3, -4 )
shapes/0/trigger = false
collision/layers = 4
collision/mask = 0
collision/margin = 0.01
script/script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}
vida = 1

[node name="Sprite" type="Sprite" parent="boss"]

transform/pos = Vector2( 0, -7 )
texture = ExtResource( 20 )
vframes = 2
hframes = 3
region_rect = Rect2( 0, 0, 112, 64 )

[node name="shape" type="CollisionShape2D" parent="boss"]

transform/pos = Vector2( -3, -4 )
shape = SubResource( 23 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="boss"]

transform/pos = Vector2( 0, -7 )
input/pickable = true
shapes/0/shape = SubResource( 24 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3, 5 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="boss/Area2D"]

transform/pos = Vector2( -3, 5 )
shape = SubResource( 24 )
trigger = false
_update_shape_index = 0

[node name="animacao_asas" type="AnimationPlayer" parent="boss"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/asas = SubResource( 18 )
playback/active = true
playback/speed = 0.5
blend_times = [  ]
autoplay = "asas"

[node name="flutuando" type="AnimationPlayer" parent="boss"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flutuando = SubResource( 19 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "flutuando"

[node name="ataque1" type="AnimationPlayer" parent="boss"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ataque01 = SubResource( 20 )
anims/ataque02 = SubResource( 21 )
playback/active = true
playback/speed = 0.8
blend_times = [  ]
autoplay = ""

[node name="ataque2" type="AnimationPlayer" parent="boss"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ataque_gelo = SubResource( 22 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="boss"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="anime_player" parent="." instance=ExtResource( 21 )]

[connection signal="body_enter" from="Danos/poison" to="Danos/poison" method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Danos/poison" to="Danos/poison" method="_on_poison_body_exit"]

[connection signal="body_enter" from="door" to="door" method="_on_door_body_enter"]

[connection signal="body_enter" from="base_fim" to="base_fim" method="_on_base_fim_body_enter"]

[connection signal="body_enter" from="fechar_barreira" to="fechar_barreira" method="_on_fechar_barreira_body_enter"]

[connection signal="body_enter" from="boss/Area2D" to="boss" method="_on_Area2D_body_enter"]

[connection signal="timeout" from="boss/Timer" to="boss" method="_on_Timer_timeout"]


